# ps5upload

./: .gitignore  CHANGELOG.md  FAQ.md  Makefile  README.md
.github/workflows/: engine-ci.yml  publish.yml
LICENSES/: UnRAR-exception.md
client/: package-lock.json  package.json
client/eslint-rules/: no-untranslated-jsx.mjs
client/src/: App.tsx  index.css  main.tsx
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/src/: engine.rs  lib.rs
client/src/api/: ps5.ts
client/src/components/: Button.tsx  CommandPalette.tsx  GameIcon.tsx  (+9 more)
docs/: DESIGN-V4-IMPL.md  DESIGN-V4.md  FEATURE-GAP-ANALYSIS.md  elf-arsenal-reference-fixes.md  klog-launch-watcher-feasibility.md  multi-console-redesign.md  rar-support-design.md  throughput-analysis.md
engine/: Cargo.toml
engine/crates/ps5upload-core/: Cargo.toml  build.rs
engine/crates/ps5upload-core/src/: backup.rs  connection.rs  download.rs  fan_curve.rs  fs_ops.rs  hw.rs  lib.rs  notif.rs  pkg_install.rs  process_mgr.rs  profile.rs  remoteplay.rs  transfer.rs  users.rs
engine/crates/ps5upload-core/testdata/rar/: README.md
engine/crates/ps5upload-core/tests/: live_appdb.rs
payload/: Makefile
payload/dpi/: ezremote-dpi.elf  ezremote_dpi.c
payload/include/: backup.h  bgft.h  config.h  drive_sensors.h  fan_curve.h  hw_guard.h  hw_info.h  notif.h  profile.h  remoteplay.h  sys_registry.h
payload/src/: backup.c  bgft.c  drive_sensors.c  fan_curve.c  hw_info.c  main.c  notif.c  proc_list.c  profile.c  register.c  remoteplay.c  runtime.c  shellui_rpc.c  sys_registry.c  sys_time.c
payload/tests/: hw_guard_selftest.c
scripts/: hw-test-loop.sh  i18n-known-missing.json  install-macos.sh  install-ubuntu.sh  install-windows.ps1  update-version.js  validate-repo.mjs
scripts/release/: android-fix-cleartext.sh  android-postinit-patch.sh
tests/: install-fallback-hw.mjs
(+129 files in other folders)
