[package]
name = "ps5upload-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22"
blake3.workspace = true
ftx2-proto = { path = "../ftx2-proto" }
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
# Read .zip game dumps and stream-decompress them straight into the FTX2
# shard pipeline (transfer.rs `transfer_zip`). Deflate-only, matching the
# pin already vetted in client/src-tauri (save_archive.rs) — no bzip2/zstd
# C libs.
zip = { version = "8", default-features = false, features = ["deflate"] }
# Read .7z game dumps (commonly a single .exfat image) the same way — host
# decompress + stream into the shard pipeline (transfer.rs `transfer_7z`).
# `default-features = false` keeps ONLY the always-on pure-Rust LZMA/LZMA2
# decoder (lzma-rust2) + crc32fast, dropping the optional bzip2 (C dep), aes/
# getrandom, ppmd, brotli and zstd defaults — so the dependency cross-compiles
# cleanly to aarch64-linux-android with no C toolchain. LZMA2 covers the
# overwhelming majority of real-world 7z game dumps; an archive using an
# unsupported codec fails with a clear "re-pack with LZMA2" message.
sevenz-rust2 = { version = "0.21", default-features = false }
# Decode user-supplied avatar images (profile.rs). Pure-Rust decoders only
# (png/jpeg/webp/bmp/gif) — no C deps, so the Android cross-compile stays
# clean, same care as the zip/sevenz pins above. We hand-roll the bilinear
# resize + DXT5/DDS encode (ported to match the PS5 reference byte-for-byte),
# so only the decode + PNG re-encode sides of `image` are exercised.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif"] }
